# MatrixLib

./: .gitignore  CMakeLists.txt  README.md
src/: cpuMultithreading.c  matrix.c  matrixMultiply.c  multithreading.c
src/cuda/: gpu_matmul.cu  gpu_matmul.h
src/include/: cpuMultithreading.h  matrix.h  multithreading.h
test/: cpuStressTest.c  matrixInitTest.c  matrixMultiplicationTest.c  matrixMultitest.c  matrixTransposeTest.c  matrixgputest.c  multiMultiplicationTest.c  stresstest.c
